# erp-virtualization-system

./: .gitignore  ABRIR_PANEL.bat  APK_LISTO.md  COMPILAR_APK.md  DEPLOY_TRIGGER.txt  Dockerfile  Dockerfile.minimal  Dockerfile.production  Dockerfile.railway  Dockerfile.rust-minimal  Dockerfile.simple  ESTADO_APP.md  FORCE_DEPLOY.md  RAILWAY_DEPLOY_NOW.txt  README.md  build-android-simple.bat  build-railway.sh  deploy-admin-panel.bat  deploy-admin-panel.sh  deploy-fix.bat  deploy-now.bat  deploy-production.bat  deploy-railway-push.sh  deploy-railway.sh  docker-compose.hybrid.yml  railway.json  setup-hybrid.sh  setup-local-server.bat  setup-local-server.sh  start-panel-simple.sh  start-panel-working.bat  sync-gradle.bat  test-panel-simple.bat  test-sistema-completo.bat
android/: build.gradle.kts  gradlew  settings.gradle.kts
android/app/: build.gradle.kts
android/gradle/: libs.versions.toml
containers/office/: Dockerfile  supervisord.conf
containers/sap/: Dockerfile  start-sap.sh
cpanel/: .env.example  Cargo.toml  Dockerfile
cpanel/containers/office/: start-office.sh  xfce4-desktop.xml
cpanel/containers/sap/: supervisord.conf
cpanel/panel/: index.html
cpanel/src/: auth_client.rs  main.rs  screen_capture.rs  streaming.rs  test_endpoints.rs
database/: init.sql
database/migrations/: 002_indexes.sql
deployment/: hybrid-architecture.md  railway-config.md
docs/: APK_CORREGIDO.md  BUILD_FIX_SUMMARY.md  INSTALACION_CLIENTE.md  PANEL_ADMIN_COMPLETO.md  QUICK_START.md  SISTEMA_FUNCIONANDO.md  SOLUCION_PANEL_404.md  index.html
infrastructure/: docker-compose.yml  domain-dns-setup.md  kubernetes-cluster.yaml  multi-tenant-setup.yaml  network-security.yaml  server-setup.md  small-scale-setup.md  storage-architecture.md
infrastructure/nginx/: nginx.conf
k8s/: deployment.yaml
railway-api/: .dockerignore  Cargo.toml  Dockerfile  fix_passwords.js  initdb.js  log.txt  package-lock.json  package.json  test_db.js
scripts/: build-apk-release.bat  build-apk.bat  build-railway.bat  build.sh  deploy-github-pages.bat  dev-setup.sh  install-cpanel-complete.bat  start-admin-panel.bat  start-panel-simple.bat  test-streaming-complete.bat
security/: istio-security.yaml
server/: Cargo.toml  Dockerfile
server-local/: Dockerfile
server-railway/: .env.example  Cargo.toml  Cargo_minimal.toml  Cargo_original.toml  Cargo_simple.toml  Dockerfile  sqlx-data.json
server-railway/src/: auth.rs  database.rs  database_broken.rs  main.rs  main_simple.rs  migrations.rs  models.rs  visualization.rs
server-railway/static/: index.html
server/src/: auth.rs  container.rs  main.rs  security.rs  streaming.rs
web-client/: index.html
web-client/js/: app.js  (+2 more)
(+51 files in other folders)
