[package]
name = "erp-virtualization-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework ultra-moderno
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# WebRTC y streaming
webrtc = "0.11"
gstreamer = "0.22"
gstreamer-webrtc = "0.22"

# Seguridad
rustls = "0.23"
rustls-pemfile = "2.0"
x509-parser = "0.16"

# Serialización y comunicación
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.11"
prost = "0.12"

# Base de datos y cache
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# Logging y observabilidad
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = "0.21"

# Autenticación y autorización
jsonwebtoken = "9.0"
argon2 = "0.5"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Containerización y orquestación
bollard = "0.16"  # Docker API
kube = "0.87"     # Kubernetes API
k8s-openapi = { version = "0.20", features = ["latest"] }

[build-dependencies]
tonic-build = "0.11"